syntax = "proto3";

package tarianpb.types;
option go_package = "github.com/kube-tarian/tarian/pkg/tarianpb";
import "google/protobuf/timestamp.proto";

message MatchLabel {
	string key = 1;
	string value = 2;
}

message Selector {
	repeated MatchLabel match_labels = 1;
}

message AllowedProcessRule {
	optional string regex = 1;
}

message AllowedFileRule {
	string name = 1;
	optional string sha256sum = 2;
}

message Constraint {
	string kind = 1;
	string namespace = 2;
	string name = 3;

	Selector selector = 4;
	repeated AllowedProcessRule allowed_processes = 5;
	repeated AllowedFileRule allowed_files = 6;
}

message Process {
	int32 pid = 1;
	string name = 2;
}

message ViolatedFile {
	string name = 1;
	string actualSha256Sum = 2;
	string expectedSha256Sum = 3;
}

message Label {
	string key = 1;
	string value = 2;
}

message Pod {
	string uid = 1;
	string namespace = 2;
	string name = 3;
	repeated Label labels = 4;
}

enum FalcoPriority {
	option allow_alias = true;
	EMERGENCY = 0;
	emergency = 0;
	Emergency = 0;
	ALERT = 1;
	alert = 1;
	Alert = 1;
	CRITICAL = 2;
	critical = 2;
	Critical = 2;
	ERROR = 3;
	error = 3;
	Error = 3;
	WARNING = 4;
	warning = 4;
	Warning = 4;
	NOTICE = 5;
	notice = 5;
	Notice = 5;
	INFORMATIONAL = 6;
	informational = 6;
	Informational = 6;
	DEBUG = 7;
	debug = 7;
	Debug = 7;
}

message FalcoAlert {
	string rule = 1;
	FalcoPriority priority = 2;
	string output = 3;
	map<string, string> outputFields = 4;
}

message Target {
	Pod pod = 1;
	repeated Process violatedProcesses = 2;
	repeated ViolatedFile violatedFiles = 3;
	optional FalcoAlert falcoAlert = 4;

	string detectionDataType = 5;
	string detectionData = 6;

}

message Event {
	string kind = 1;
	string type = 2;

	string uid = 3;
	google.protobuf.Timestamp serverTimestamp = 4;
	google.protobuf.Timestamp clientTimestamp = 5;
	google.protobuf.Timestamp alertSentAt = 6;

	repeated Target targets = 7;
}

message Action {
	string kind = 1;
	string namespace = 2;
	string name = 3;

	Selector selector = 4;
	bool onViolatedProcess = 5;
	bool onViolatedFile = 6;
	bool onFalcoAlert = 7;
	FalcoPriority falcoPriority = 8;

	string action = 9;
}
